소셜 로그인 구글 정보 제거

--- a/src/main/resources/application-oauth.properties
+++ b/src/main/resources/application-oauth.properties
@@ -1,5 +1,5 @@
 ## 소셜 정보
 ## 구글
-spring.security.oauth2.client.registration.google.client-id=488146485927-008sddj799doj26hc8v3vkcsjf5pa8mn.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=GGwdh8CLhUSGr2bTfeZ4_Phr
+spring.security.oauth2.client.registration.google.client-id=
+spring.security.oauth2.client.registration.google.client-secret=
 spring.security.oauth2.client.registration.google.scope=email
